--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
+    "appwrite": "^16.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-use": "^17.6.0",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
